# random-algorithms-homework

./: Cargo.toml  readme.md
src/: algorithm.rs  command_line_arguments.rs  document.rs  hash_function.rs  main.rs  q1.rs  repetition_algorithm.rs
src/common/: algorithm.rs  mod.rs  reduce.rs  repeat.rs  repetition_algorithm.rs  with_name.rs
src/extensions/: vec_extensions.rs
src/q2/: hash_function.rs  l2_algorithm.rs  mod.rs  q2_amplificated_command.rs  q2_naive_command.rs
src/q3/: matrix.rs  mod.rs
