[package]
name = "random-algorithms-homework"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
log = "0.4.16"
nameof = "1.2.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.2"
